# XKICK-Server

./: CMakeLists.txt  CMakePresets.json  README.md  kicks2.sql  kicks2_log.sql  vcpkg.json
run/: config.ini
run/Table/: Map_Dam_ObjectProperty.csv  Map_Down_ObjectProperty.csv  Map_Palace_ObjectProperty.csv  Table_AI_Costume.csv  Table_Action.csv  Table_Balance.csv  Table_Brand.csv  Table_Camera.csv  Table_Company.csv  Table_Enchant.csv  Table_FileList.csv  Table_Fraction.csv  Table_GoalPostNet.csv  Table_Headword.csv  Table_Input.csv  Table_ItemMix2.csv  Table_Language.csv  Table_Language.txt  Table_Language_Artech.csv  Table_Language_GSP.csv  Table_Language_Gamepower7.csv  Table_Level.csv  Table_Location.csv  Table_Map.csv  Table_MapParticleEffect.csv  Table_Mission.csv  Table_Morph.csv  Table_Object.csv  Table_Ogg.csv  Table_Pack.csv  Table_Pannel.csv  Table_ParticleEffects.csv  Table_Pattern.csv  Table_Position.csv  Table_Position_Skill.xls  Table_Quest_Complete.csv  Table_Robot.csv  Table_Skeleton.csv  Table_Sound.csv  Table_TempSkill.csv  (+6 more)
run/Table/Default_Eng/: Table_AI_Card.csv  Table_AI_Name.csv  Table_Ball.csv  Table_Ceremony.csv  Table_Faculty.csv  Table_Filter.csv  Table_GameTip.csv  Table_Ground.csv  Table_Item.csv  Table_Msg.csv  Table_Name.csv  Table_Option.csv  Table_Position.csv  Table_Quest.csv  Table_Situation.csv  Table_Skill.csv  Table_Training.csv
run/Table/Dubai_Arb/: Table_AI_Ability.csv  Table_AI_Card.csv  Table_AI_Costume.csv  Table_Ball.csv  Table_Ceremony.csv  Table_Faculty.csv  Table_Filter.csv  Table_GameTip.csv  Table_Ground.csv  Table_Item.csv  Table_ItemClass.csv  Table_ItemFaculty.csv  Table_ItemMix.csv  Table_Msg.csv  Table_Name.csv  Table_Option.csv  Table_Position.csv  Table_Quest.csv  Table_Situation.csv  Table_Skill.csv  Table_Training.csv
run/Table/Korean/: Table_AI_Ability.csv  Table_AI_Card.csv  Table_AI_Costume.csv  Table_AI_Name.csv  Table_Ceremony.csv  Table_Faculty.csv  Table_Filter.csv  Table_GameTip.csv  Table_Item.csv  Table_Msg.csv  Table_Name.csv  Table_Option.csv  Table_Position.csv  Table_Quest.csv  Table_Situation.csv  Table_Skill.csv  Table_Training.csv
src/certify/: CMakeLists.txt
src/certify/include/: CertifyLoad.h  CertifyProcess.h  Config.h  Init.h  Item.h  Main.h  Member.h  Net.h  ServerNode.h  Sql.h  Thread.h  packet.h
src/certify/src/: HackShield.cpp  config.cpp  connect.cpp  globals.cpp  init.cpp  load.cpp  main.cpp  member.cpp  packet.cpp  process.cpp  server.cpp  sql.cpp  thread.cpp  util.cpp
src/common/: CMakeLists.txt
src/common/include/: AhnHS.h  CTable.h  Database.h  Define.h  HackShield.h  Include.h  Load.h  LogManager.h  Protocol.h  Que.h  Secure.h  Singleton.h  Struct.h  Table.h  Util.h  md5.h
src/common/src/: AhnHS_stub.cpp  LogManager.cpp  database.cpp  md5.cpp  que.cpp  secure.cpp  table.cpp  util.cpp
src/game/: CMakeLists.txt
src/game/include/: Command.h  Config.h  Domain.h  GameItem.h  GameLoad.h  GameProcess.h  GameProtocol.h  GameProtocolEquip.h  GameProtocolItem.h  GameProtocolRoom.h  GameProtocolTeam.h  Global.h  Init.h  Lobby.h  Main.h  Net.h  Player.h  Room.h  ServerNode.h  Sql.h  Thread.h  packet.h
src/game/src/: card.cpp  ceremony.cpp  config.cpp  connect.cpp  globals.cpp  init.cpp  item.cpp  load.cpp  lobby.cpp  main.cpp  packet.cpp  player.cpp  process.cpp  quest.cpp  rndshop.cpp  room.cpp  server.cpp  skill.cpp  sql.cpp  stubs.cpp  team.cpp  thread.cpp  training.cpp  util.cpp  wire_asserts.cpp
tools/: create_pak.py  extract_pak.py
